--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "lab7_ecommerce",
+  "homepage": "https://iumahboobi.github.io/ecommerce_rtk_redux",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -24,6 +25,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.3.0",
     "vite": "^5.2.0"
   }
 }
